--- a/dvc.yaml
+++ b/dvc.yaml
@@ -21,3 +21,15 @@ stages:
 
   # if changes made , if sense the changes and rerun the pipeline
     # even dvc.loc file contains the size of thee file also
+
+###############################
+  # executing the split_data.py
+
+  split_data:
+    cmd: python src/split_data.py --config=params.yaml
+    deps:
+    - src/split_data.py
+    - data/raw/winequality.csv
+    outs:
+    - data/processed/train_winequality.csv
+    - data/processed/test_winequality.csv
