github action workflow

--- a/.github/workflow/ci-cd.yaml
+++ b/.github/workflow/ci-cd.yaml
@@ -1,4 +1,5 @@
 name: Python application
+# workflow
 # when ever we push or pull on main branch then this action will run
 # then it will run these JOBS
 on:
