--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -42,12 +42,18 @@ jobs:
     - name: Test with pytest
       run: |
         pytest -v
+
+# previous was full of contineous integration
+
+# now contineous deployment
 # deploying to heroku
-#    - name: Deploy to Heroku
-#      env:
-#        HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
-#        HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
-#      if: github.ref == 'refs/heads/main' && job.status == 'success'
-#      run: |
-#        git remote add heroku https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git
-#        git push heroku HEAD:main -f
+    - name: Deploy to Heroku
+      env:
+        HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
+        HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
+      if: github.ref == 'refs/heads/main' && job.status == 'success'
+      # main branch
+      # in main branch if JOB is success then only this run will execute
+      run: |
+        git remote add heroku https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git
+        git push heroku HEAD:main -f
