--- a/params.yaml
+++ b/params.yaml
@@ -19,8 +19,10 @@ estimators:
     params:
       # alpha: 0.88
       # l1_ratio: 0.89
-      alpha: 0.88
-      l1_ratio: 0.89
+      #alpha: 0.88
+      #l1_ratio: 0.89
+      alpha: 0.5
+      l1_ratio: 0.5
 model_dir: saved_models
 
 reports:
@@ -28,3 +30,10 @@ reports:
   scores: report/scores.json
 
 webapp_model_dir: prediction_service/model/model.joblib
+
+mlflow_config:
+  artifacts_dir: artifacts
+  experiment_name: ElasticNet regression
+  run_name: mlops
+  registered_model_name: ElasticNetWineModel
+  remote_server_url: http://0.0.0.0:1234
